--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div class="acor-body">
 					<p>ПРИНЦИП РАБОТЫ РЕНТГЕНОТЕЛЕВИЗИОННОЙ УСТАНОВКИ И ВЛИЯНИЕ ИОНИЗОРУЮЩЕГО ИЗЛУЧЕНИЯ НА ЗДОРОВЬЕ</p>
 					<div class="acor-bodylink">
-						<a target="_blank" href="https://krdu-mvd-recommendation.github.io/r1t1/">
+						<a href="https://krdu-mvd-recommendation.github.io/r1t1/">
 							<p>1.1. Ионизирующие излучения</p>
 						</a>
 						<a href="#">
